# telegram-mcp

./: .env.example  .gitignore  BUGFIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT_REPORT.md  LICENSE  MISSING_FEATURES.md  PROJECT_CHECKLIST.md  README.md  ROADMAP.md  SUPPORT.md  VERIFICATION_REPORT.md  account_manager.py  account_tools.py  batch_operations.py  config.example.json  dashboard.py  docker-compose.yml  health_monitor.py  log_manager.py  login.py  main.py  proxy_manager.py  pyproject.toml  pyro_qr_login.py  qr_login.py  qr_web_login.py  requirements.txt  scheduler.py  security.py  session_manager.py  setup.sh  stats_tracker.py  template_manager.py  test_comprehensive.py  test_edge_cases.py  test_new_features.py  test_tools.py  (+3 more)
.github/: FUNDING.yml
docs/: AUTHORITATIVE_RELEASE_PLAN.md  GITHUB_TOPICS.md  PHONE_LOGIN_TEST.md  SEO_OPTIMIZATION_SUMMARY.md  SOCIAL_MEDIA_TEMPLATE.md  TELEGRAM_PROTOCOL_MATRIX.md
shared/: __init__.py  client_factory.py  config.py  json_store.py  response.py
static/: dashboard.html
tests/: test_health_monitor.py  test_log_manager.py  test_proxy_manager.py  test_stats_tracker.py  test_template_manager.py
